# introduction-to-classical-music

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-CONTENT.md  NOTICE  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  preflight-checklist.md  tsconfig.json  tsconfig.runtime.json  vitest.config.ts
tools/recording-retrieval-service/app/: .gitignore  README.md  build-portable.cmd  install-windows.cmd  pyproject.toml  start-service.cmd  start-ui.cmd
tools/recording-retrieval-service/app/app/: __init__.py  main.py
tools/recording-retrieval-service/app/config/: llm.example.json  platform-search.example.json
tools/recording-retrieval-service/app/docs/: bilibili-storage-state-setup.md  platform-api-setup-checklist.md
tools/recording-retrieval-service/app/materials/: eval-target-overrides.json
tools/recording-retrieval-service/app/packaging/: build-portable.ps1  portable-start-service.cmd  portable-start-ui.cmd  recording-retrieval-service.spec
tools/recording-retrieval-service/app/scripts/: audit_parent_work_links.py  capture_bilibili_storage_state.py  capture_parent_work_snapshot.py  real_data_regression.py  run_frozen_parent_work_eval.py  run_parent_work_eval.py  start-service.cmd  start-ui.cmd  sync_bilibili_cookie_from_storage_state.py
tools/recording-retrieval-service/app/tests/: fixtures.py  test_api_contract.py  test_audit_parent_work_links.py  test_browser_fetcher.py  test_frozen_replay.py  test_input_analysis.py  test_llm_config.py  test_pipeline_logic.py  (+11 more)
(+239 files in other folders)
