[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recording-retrieval-service"
version = "0.1.0"
description = "Standalone and owner-compatible Recording Retrieval Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "playwright>=1.58,<2.0",
  "pydantic>=2.10,<3.0",
  "uvicorn>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pyinstaller>=6.12,<7.0",
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
